--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
     "@nrwl/cypress": "15.6.3",
+    "@nrwl/devkit": "17.2.10-beta.3",
     "@nrwl/eslint-plugin-nx": "15.6.3",
-    "@nrwl/jest": "15.6.3",
-    "@nrwl/js": "15.6.3",
+    "@nrwl/jest": "17.2.10-beta.3",
+    "@nrwl/js": "17.2.10-beta.3",
     "@nrwl/linter": "15.6.3",
+    "@nrwl/nx-plugin": "17.2.10-beta.3",
     "@nrwl/react": "15.6.3",
     "@nrwl/webpack": "15.6.3",
     "@nrwl/workspace": "15.6.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@rspack/cli": "0.0.22",
     "@rspack/core": "0.0.22",
+    "@rspack/dev-server": "0.0.22",
     "@svgr/webpack": "^6.1.2",
+    "@swc-node/register": "^1.4.2",
+    "@swc/cli": "~0.1.55",
+    "@swc/core": "^1.2.173",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.11.9",
@@ -36,6 +42,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "15.6.3",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
@@ -46,6 +53,7 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@swc/helpers": "~0.4.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
