--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,21 +10,14 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@rspack-monorepo-example/ui": [
-        "libs/ui/src/index.ts"
-      ]
+      "@rspack-monorepo-example/rspack": ["libs/rspack/src/index.ts"],
+      "@rspack-monorepo-example/ui": ["libs/ui/src/index.ts"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
