--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
     "@nrwl/cypress": "15.6.3",
-    "@nrwl/devkit": "17.2.10-beta.3",
+    "@nrwl/devkit": "15.6.3",
     "@nrwl/eslint-plugin-nx": "15.6.3",
-    "@nrwl/jest": "17.2.10-beta.3",
-    "@nrwl/js": "17.2.10-beta.3",
+    "@nrwl/jest": "15.6.3",
+    "@nrwl/js": "15.6.3",
     "@nrwl/linter": "15.6.3",
-    "@nrwl/nx-plugin": "17.2.10-beta.3",
+    "@nrwl/nx-plugin": "15.6.3",
     "@nrwl/react": "15.6.3",
     "@nrwl/webpack": "15.6.3",
     "@nrwl/workspace": "15.6.3",
@@ -20,6 +20,7 @@
     "@rspack/cli": "0.0.22",
     "@rspack/core": "0.0.22",
     "@rspack/dev-server": "0.0.22",
+    "@rspack/plugin-minify": "^0.0.22",
     "@svgr/webpack": "^6.1.2",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "~0.1.55",
